ajout d'autres paragraphes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Voluptate, necessitatibus fugit et non distinctio natus, reiciendis
+        maiores explicabo dicta aspernatur
+        rerum eum soluta laudantium fuga ipsam eos voluptates cumque eius?
+    </div>
+
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Voluptate, necessitatibus fugit et non distinctio natus, reiciendis
+        maiores explicabo dicta aspernatur
+        rerum eum soluta laudantium fuga ipsam eos voluptates cumque eius?
+    </div>
+
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Voluptate, necessitatibus fugit et non distinctio natus, reiciendis
+        maiores explicabo dicta aspernatur
+        rerum eum soluta laudantium fuga ipsam eos voluptates cumque eius?
+    </div>
     <div class="container">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
         Iste, alias. Aut tenetur, vitae numquam inventore, magnam 
@@ -15,11 +35,11 @@
     </div>
 
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptatibus expedita quibusdam dicta velit nobis quisquam earum voluptatem, aperiam sint error rerum in ratione ducimus nesciunt veritatis porro molestiae distinctio.
-    Minima quasi dicta suscipit repellat dignissimos! Eum perferendis, sit vel asperiores incidunt cumque magnam? Quidem at, ab quo eaque natus cumque deleniti fugiat earum voluptatem nemo est nobis reprehenderit tempora!</div>
+    Minima quasi dicta suscipit repellat dignissimos! Eum perferendis, sit vel asperiores incidunt cumque magnam? Quidem at, ab quo eaque natus cumque deleniti fugiat earum voluptatem nemo est nobis reprehenderit tempora!git commit -m "first commit"git commit -m "first commit"</div>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptatibus expedita quibusdam dicta velit nobis quisquam earum voluptatem, aperiam sint error rerum in ratione ducimus nesciunt veritatis porro molestiae distinctio.
-    Minima quasi dicta suscipit repellat dignissimos! Eum perferendis, sit vel asperiores incidunt cumque magnam? Quidem at, ab quo eaque natus cumque deleniti fugiat earum voluptatem nemo est nobis reprehenderit tempora!</div>
+    Minima quasi dicta suscipit repellat dignissimos! Eum perferendis, sit vel asperiores incidunt cumque magnam? Quidem at, ab quo eaque natus cumque deleniti fugiat earum voluptatem nemo est nobis reprehenderit tempora!git commit -m "first commit"git commit -m "first commit"</div>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptatibus expedita quibusdam dicta velit nobis quisquam earum voluptatem, aperiam sint error rerum in ratione ducimus nesciunt veritatis porro molestiae distinctio.
-    Minima quasi dicta suscipit repellat dignissimos! Eum perferendis, sit vel asperiores incidunt cumque magnam? Quidem at, ab quo eaque natus cumque deleniti fugiat earum voluptatem nemo est nobis reprehenderit tempora!</div>
+    Minima quasi dicta suscipit repellat dignissimos! Eum perferendis, sit vel asperiores incidunt cumque magnam? Quidem at, ab quo eaque natus cumque deleniti fugiat earum voluptatem nemo est nobis reprehenderit tempora!git commit -m "first commit"git commit -m "first commit"</div>
 
     
 
